yaml/sa-demo/ingress/ui-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: temporal-money-transfer-ui-ingress
  namespace: temporal-money-transfer
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`transfer.tmprl-demo.cloud`)
    services:
    - name: temporal-money-transfer-ui-service
      namespace: temporal-money-transfer
      passHostHeader: true
      port: 80
      responseForwarding:
        flushInterval: 100ms
  tls:
    secretName: tmprl-demo-cloud-ui-tls
